Popup - create html body

--- a/html/popup.html
+++ b/html/popup.html
@@ -1,1 +1,9 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello All</title>
+  </head>
+  <body>
+    I'm description
+  </body>
+</html>
